# freezerbot

./: .gitignore  Cargo.toml  CommandRegistrar.fs  CommandUtil.fs  Dockerfile  FreezeCommand.fs  Program.fs  RepositoryModel.fs  freezerbot.fsproj
Migrations/: 20230518160053_Initial.fs  20230518164103_AddGuilds.fs  RepositoryContextModelSnapshot.fs
src/: main.rs  types.rs
