[package]
name = "freezerbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.11"
poise = "0.5"
tokio = { version = "1", features = ["full"] }
dotenv = "0"
mongodb = "2.1"
lazy_static = "1.4"
async_once = "0.2.6"
serde = "1.0.136"
futures = "0.3.21"
anyhow = "1.0.56"
